MacViews: Add icon to audio playing/muted tabs in Window menu

Bug: 846796
Change-Id: I417702c78b1b5dec4914a9efbc0ec16e1d016de9
Reviewed-on: https://chromium-review.googlesource.com/1147148
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577335}
Former-commit-id: cf2d5c1f1587d0cdd040cfb95f56555141ff53f9