chrome/browser/ui/views/frame/browser_view.cc
@@ -1657,7 +1657,19 @@ bool BrowserView::CanActivate() const {
 }
 
 base::string16 BrowserView::GetWindowTitle() const {
-  return browser_->GetWindowTitleForCurrentTab(true /* include_app_name */);
+  base::string16 title =
+      browser_->GetWindowTitleForCurrentTab(true /* include_app_name */);
+#if defined(OS_MACOSX)
+  TabAlertState state =
+      chrome::GetTabAlertStateForContents(GetActiveWebContents());
+  if (state == TabAlertState::AUDIO_PLAYING)
+    title = l10n_util::GetStringFUTF16(IDS_WINDOW_AUDIO_PLAYING_MAC, title,
+                                       base::WideToUTF16(L"\U0001F50A"));
+  else if (state == TabAlertState::AUDIO_MUTING)
+    title = l10n_util::GetStringFUTF16(IDS_WINDOW_AUDIO_MUTING_MAC, title,
+                                       base::WideToUTF16(L"\U0001F507"));
+#endif
+  return title;
 }
 
 base::string16 BrowserView::GetAccessibleWindowTitle() const {
